# LTTC2025

./: .gitignore  README.md
HW_QD/: H3.tiff  functions2use.mod  plot.gn  plotall.gn  wavepacket
HW_QD/LaTEX/: Sources.bib  main.aux  main.fls  main.tex
MD_HW/: Boltz_plot  Gaussian_plot.f90  boltz.gp  gofr.gp  md.xyz  md_program  my_first_MD_code.f90  plot_ener.gp  utilities.f90  utilities.mod  yifanin.xyz
MD_HW/LaTEX/: main.bbl  main.bcf  main.tex
Molecular_Dynamics/: Boltzmann_plot.f90  ENERGIES  Gaussian_plot  README.md  boltz.gp  boltz_bin  gauss_bin  gofr.gp  hist.gp  md.xyz  plot_ener.gp
Molecular_Dynamics/LaTEX/: main.aux  main.fdb_latexmk  main.fls  main.out  main.run.xml
Molecular_Dynamics/report/: MD_report.tex  Sources.bib
Quantum_Dynamics/: H0.tiff  H1.tiff  H2.tiff  H4.tiff  README.md  coeff.gn  gn_graphics.f90  propagate  propagate.f90
Quantum_Dynamics/LaTEX/: main.bcf  main.fdb_latexmk  main.out
Quantum_Dynamics/report/: QD_report.tex  cis320.cls
