 set terminal png size 800,600
 set output 'coeff.png'
 stats 'coeff.dat' nooutput
 set xlabel 't (fs)'
 set ylabel 'Real part of Coefficient'
 set title 'Wavefunction Coefficient Time Evolution'
 p 'coeff.dat' u 1:2 w l lw 3 t 'c0', \
 'coeff.dat' u 1:3 w l lw 3 t 'c1', \
 'coeff.dat' u 1:4 w l lw 3 t 'c2', \
 'coeff.dat' u 1:5 w l lw 3 t 'c3', \
 'coeff.dat' u 1:6 w l lw 3 t 'c4'
